<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/background"
android:backgroundTintMode="screen"
tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/bottomLogo"
        android:layout_width="400dp"
        android:layout_height="358dp"
        android:layout_marginTop="107dp"
        android:alpha="0.2"
        android:contentDescription="@string/md_count_track_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,VisualLintBounds,ImageContrastCheck" />

    <ImageView
        android:id="@+id/masLogo"
        android:layout_width="166dp"
        android:layout_height="75dp"
        android:contentDescription="@string/mas_logo"
        android:src="@drawable/maslog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="284dp"
        android:layout_height="117dp"
        android:autofillHints=""
        android:background="#6F568595"
        android:backgroundTintMode="src_in"
        android:shadowColor="#D9E1E2"
        android:text="@string/md"
        android:textColor="#4CAF50"
        android:textColorHighlight="#4CAF50"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174"
        tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorLink="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bottomLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        tools:ignore="DuplicateIds,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorLink="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645"
        tools:ignore="DuplicateIds,TextContrastCheck" />

    <Button
    android:id="@+id/signinBtn"
    android:layout_width="273dp"
    android:layout_height="47dp"
    android:layout_marginTop="350dp"
    android:backgroundTint="#D51515"
    android:text="@string/sign_in"
    android:textColor="#ffffff"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.601"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.751"
    tools:ignore="DuplicateIds,MissingConstraints,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>