<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TableActivity">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="347dp"
        android:layout_height="308dp"
        android:alpha="0.2"
        android:contentDescription="@string/todooo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/tableTitle"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:text="@string/table"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/searchInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:autofillHints=""
        android:background="#e0e0e0"
        android:hint="@string/search"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toBottomOf="@+id/logoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/acceptTableBtn"
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autoText="false"
        android:background="#FFEB3B"
        android:contentDescription="@string/btnGoToAcceptTable"
        android:text="@string/acceptt"
        android:textColor="@color/white"
        android:textColorLink="#2516E7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="Deprecated,TextViewEdits,TextContrastCheck" />

    <Button
        android:id="@+id/rejectTableBtn"
        android:layout_width="222dp"
        android:layout_height="41dp"
        android:layout_marginTop="14dp"
        android:background="#FFEB3B"
        android:text="reject"
        android:textColor="@color/white"
        android:textColorLink="#153DCE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="HardcodedText,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
