<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BE3EA2AF"
    android:backgroundTint="#AF32CC87"
    android:backgroundTintMode="screen"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/bottomLogo"
        android:layout_width="538dp"
        android:layout_height="431dp"
        android:layout_marginTop="107dp"
        android:alpha="0.2"
        android:contentDescription="@string/md_count_track_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,VisualLintBounds,ImageContrastCheck" />


    <EditText
        android:id="@+id/email"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#43142CE2"
        android:backgroundTint="@color/black"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorLink="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bottomLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        tools:ignore="DuplicateIds,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="#43142CE2"
        android:backgroundTint="@color/black"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorLink="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="DuplicateIds,TextContrastCheck" />

    <ImageView
        android:id="@+id/masLogo"
        android:layout_width="166dp"
        android:layout_height="75dp"
        android:contentDescription="@string/mas_logo"
        android:src="@drawable/maslog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="284dp"
        android:layout_height="117dp"
        android:autofillHints=""
        android:background="#6F1D96BF"
        android:backgroundTintMode="src_in"
        android:shadowColor="#29C4CC"
        android:text="@string/md"
        android:textColor="#1228A4"
        android:textColorHighlight="#270FA9"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="273dp"
        android:layout_height="47dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="#003366"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="DuplicateIds,MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/logingbtn"
        android:layout_width="273dp"
        android:layout_height="47dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="#003366"
        android:text="Login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        tools:ignore="DuplicateIds,HardcodedText,MissingConstraints,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>